fixed front page logo for readability, and fixed the description sizing on ticket create

--- a/src/ticketCreatePage/ticketCreate.css
+++ b/src/ticketCreatePage/ticketCreate.css
@@ -119,6 +119,6 @@ label {
     padding-right: 10px;
 }
 
-textarea {
+.descriptionText {
     resize: none;
 }
